# pytemplate

./: .gitignore  NEWS  README.md  pkg_info_for_dev.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: index.html  module1.html  module2.html
docs/theme/: head.mako  logo.mako
src/pytemplate/: __init__.py  __utils.py  __utils_module1.py  module1.py  module2.py
src/pytemplate/resources/: data.csv
tests/: test_module1.py  test_module2.py  test_utils.py
vignettes/: package.ipynb
