# This file contains infromation on configuration and testing
# of the package.

# The package is build with setuptools
[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

# The package is tested with pytest. Unit tests are 
# in tests directory. pytest also runs coverage test.
# Create xml file from coverage results. This file is sent to codecov in GHA.
[tool.pytest.ini_options]
addopts = "--cov=pytemplate --cov-report=xml"
testpaths = [
    "tests",
]

# The code is also analyzed with mypy that tests that is static
# type checker. It analyzes possible erroneous behavior in code
# without running checks. 
[tool.mypy]
python_version = 3.9
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
