# This file contains configuration information for setuptools
# This is the main file. setup.py uses the information from This
# file.

# Information on the package. Windows, mac and linux supported.
[metadata]
name = pytemplate
description = Python package template
# Version numbering scheme:
# First number: big changes that are not backward incompatible (e.g. new releases)
# Second number: Relatively big backward compatible changes (e.g. new function)
# Third number: Small changes (e.g. bug fixes)
version = 0.0.0
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/TuomasBorman/python_package_template
author = Tuomas Borman
author_email = tvborm@utu.fi
license = Artistic License 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

# Package configuration options. Finds package automatically
# from src directory.
# The package contains resource data in package/resource directory.
[options]
python_requires = >=3.8
packages = find_namespace:
package_dir =
    =src
include_package_data = True
zip_safe = False
[options.packages.find]
where = src
[options.package_data]
pytemplate.resources =
    *

# Option for flake8 that checks that the style of code is correct
[flake8]
max-line-length = 160
